RESOLVED FIXED220399
Fix a dataMemoryTempRegister use violation in FTLLowerDFGToB3's compileLoopHint().
https://bugs.webkit.org/show_bug.cgi?id=220399
Summary Fix a dataMemoryTempRegister use violation in FTLLowerDFGToB3's compileLoopHi...
Mark Lam
Reported 2021-01-06 22:30:08 PST
This was tripping an assertion failure on the invalid use of the dataMemoryTempRegister during a Debug build JSC stress test run with DoesGC validation enabled.
Attachments
proposed patch. (1.86 KB, patch)
2021-01-06 22:39 PST, Mark Lam
no flags
Mark Lam
Comment 1 2021-01-06 22:39:29 PST
Created attachment 417155 [details] proposed patch.
Yusuke Suzuki
Comment 2 2021-01-06 22:44:15 PST
Comment on attachment 417155 [details] proposed patch. r=me
Mark Lam
Comment 3 2021-01-06 23:48:39 PST
Comment on attachment 417155 [details] proposed patch. Thanks for the review. Landing now.
EWS
Comment 4 2021-01-06 23:53:00 PST
Committed r271226: <https://trac.webkit.org/changeset/271226> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417155 [details].
Radar WebKit Bug Importer
Comment 5 2021-01-06 23:53:16 PST
Note You need to log in before you can comment on or make changes to this bug.