Fix a dataMemoryTempRegister use violation in FTLLowerDFGToB3's compileLoopHint(). https://bugs.webkit.org/show_bug.cgi?id=220399

Reviewed by Yusuke Suzuki.

This was tripping an assertion failure on the invalid use of the dataMemoryTempRegister
during a Debug build JSC stress test run with DoesGC validation enabled.

* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileLoopHint):


Canonical link: https://commits.webkit.org/232822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271226 268f45cc-cd09-0410-ab3c-d52691b4dbfc